--- a/MoonRunner/Base.lproj/Main.storyboard
+++ b/MoonRunner/Base.lproj/Main.storyboard
@@ -77,6 +77,17 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Checking login details..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ard-IT-OLr">
+                                <frame key="frameInset" minX="96" minY="262" width="183" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="VKc-r9-c1J">
+                                <frame key="frameInset" minX="177" minY="323" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -87,11 +98,13 @@
                     </view>
                     <navigationItem key="navigationItem" id="1Mg-w8-CO4"/>
                     <connections>
+                        <outlet property="activityWheel" destination="VKc-r9-c1J" id="FvU-kd-shD"/>
                         <outlet property="emailLabel" destination="34U-dN-nQb" id="ek0-gh-MOw"/>
                         <outlet property="emailTextField" destination="hkb-dY-Vkl" id="DBj-1n-3x5"/>
                         <outlet property="navigationButton" destination="KvD-HM-ebO" id="IRT-Gt-a59"/>
                         <outlet property="passwordLabel" destination="YHr-gT-GIi" id="zqX-mJ-Vce"/>
                         <outlet property="passwordTextField" destination="Vnb-vw-QAW" id="zhc-ta-u6z"/>
+                        <outlet property="statusField" destination="ard-IT-OLr" id="2Wn-Fg-8Ll"/>
                         <segue destination="MUu-vS-6fX" kind="show" identifier="loginAccepted" id="BeA-Sg-1Vn"/>
                     </connections>
                 </viewController>
